# ostrich-server

./: .gitignore  Cargo.toml  config.toml
src/: config.rs  lib.rs  main.rs
