[package]
name = "ostrich-server"
version = "0.1.0"
authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ostrich-core = { git = "https://github.com/mikelma/ostrich-core"}
tokio = { version = "0.2", features = ["full"] }
tokio-codec = "0.2.0-alpha.6"
futures = "0.3.0"
json = "0.12.1"
log = "0.4.8"
simplelog = "0.7.4"
